# ffsub

./: .gitignore  README.md  README_en.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  state.rs  types.rs
src-tauri/src/commands/: encode.rs
src-tauri/src/ffmpeg/: args.rs  progress.rs  runner.rs
src/components/: EncodingParams.tsx  FileSelector.tsx  ProgressPanel.tsx  index.ts
src/hooks/: useEncode.ts
src/services/: tauri.ts
src/styles/: global.css
src/types/: encode.ts
