[package]
name = "ffsub"
version = "0.1.0"
description = "跨平台FFmpeg字幕压制工具"
authors = ["you"]
license = "GPL-3.0-only"
edition = "2024"
rust-version = "1.93.1"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
dirs-next = "2"

[profile.release]
# 启用链接时优化，显著提升运行时性能
lto = true
# 单 codegen unit 最大化优化机会
codegen-units = 1
# 优化级别 3
opt-level = 3
# 剥离调试符号，减小二进制体积
strip = true
